--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Digitale Ausbildungsbegleitung für Köch:innen – Azubi-App + Ausbilder-System</title>
+  <title>Azubi‑App + Ausbilder‑System – cloudfrei, offlinefähig, betrieblich kontrollierbar</title>
 
   <!-- Google Font: Allura (Signatur) -->
   <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
@@ -13,25 +13,25 @@
 <body>
   <main class="wrap" role="main" aria-label="Onepage – Azubi-App + Ausbilder-System">
 
-    <!-- Top notice (Pilot) -->
-    <section class="topnotice" aria-label="Pilot-Hinweis">
+    <!-- Top notice (Pilot / Testlizenz) -->
+    <section class="topnotice" aria-label="Testen im Betrieb">
       <div class="topnotice__inner">
-        <div class="topnotice__badge">Pilotprojekt</div>
+        <div class="topnotice__badge">Test im Betrieb</div>
         <div class="topnotice__text">
-          <strong>Praxisnah testen:</strong> Betriebe können die Software im Ausbildungsalltag erproben.
-          <span class="topnotice__muted">Mehr Infos & Einstieg:</span>
+          <strong>Praxisnah testen:</strong> 4–8 Wochen im echten Ausbildungsalltag – ohne IT‑Projekt, ohne Plattformbindung.
+          <span class="topnotice__muted">Einstieg & Konditionen:</span>
         </div>
-        <a class="btn btn--ghost" href="https://mise-rebell-pilot.rebellemedia.de/" target="_blank" rel="noopener">Zum Pilot</a>
+        <a class="btn btn--ghost" href="https://mise-rebell-pilot.rebellemedia.de/" target="_blank" rel="noopener">Zum Test</a>
       </div>
     </section>
 
     <!-- Hero -->
     <header class="hero">
       <div class="hero__kicker">Digitale Ausbildungsbegleitung für Köch:innen</div>
-      <h1 class="hero__title">Azubi‑App mit Ausbilder‑System – offlinefähig, betrieblich kontrollierbar</h1>
+      <h1 class="hero__title">Azubi‑App mit Ausbilder‑System – offlinefähig, cloudfrei, betrieblich kontrollierbar</h1>
       <p class="hero__lead">
         Eine strukturierte, nachvollziehbare und prüfungsnahe Begleitung der Ausbildung – ohne Cloud‑Zwang,
-        ohne zusätzliche IT‑Infrastruktur und ohne laufende Kosten.
+        ohne zusätzliche IT‑Infrastruktur und ohne laufende Plattformkosten.
       </p>
 
       <div class="hero__chips" aria-label="Kurzvorteile">
@@ -39,20 +39,20 @@
         <span class="chip">Android & iOS</span>
         <span class="chip">Offline nutzbar</span>
         <span class="chip">Start über index.html</span>
-        <span class="chip">Verkauf als ZIP</span>
+        <span class="chip">Bereitstellung als ZIP</span>
       </div>
 
       <div class="hero__split" aria-label="Komponenten">
         <div class="card">
           <h2 class="card__title">1) Azubi‑App (Smartphone & Tablet)</h2>
           <p class="card__text">
-            Für Berichtsheft, Kalender, Warenkunde, Glossar, Prüfungs‑Simulationen und Lernunterstützung – direkt auf dem Gerät.
+            Berichtsheft, Kalender, Warenkunde, Glossar, Prüfungs‑Simulationen und Lernunterstützung – direkt auf dem Gerät.
           </p>
         </div>
         <div class="card">
           <h2 class="card__title">2) Ausbilder‑System (Rechner / Laptop)</h2>
           <p class="card__text">
-            Für Überblick, Kontrolle, interne Notizen und Ausbildungsfortschritt – browserbasiert, ohne Installation.
+            Überblick, Kontrolle, interne Notizen und Ausbildungsfortschritt – browserbasiert, ohne Installation.
           </p>
         </div>
       </div>
@@ -67,8 +67,8 @@
             <li>Übersicht über Ausbildungsstand und Berichtszeiträume</li>
             <li>Entlastung im Alltag durch klare Struktur</li>
             <li>Frühzeitiges Erkennen von Wissenslücken</li>
-            <li>Einheitliche Ausbildungsdokumentation</li>
-            <li>Keine Abhängigkeit von externen Plattformen</li>
+            <li>Einheitliche Ausbildungsdokumentation (prüfungsnah)</li>
+            <li>Keine Abhängigkeit von externen Plattformen / App‑Stores</li>
             <li>Volle Datenhoheit beim Betrieb</li>
           </ul>
         </div>
@@ -76,10 +76,10 @@
         <div class="card card--soft">
           <h3 class="card__kicker">Für wen das ideal ist</h3>
           <ul class="list">
-            <li>Ausbildungsbetriebe im Küchenbereich</li>
-            <li>Kleine & mittelständische Betriebe</li>
+            <li><strong>Handwerksbetriebe:</strong> verlässliche Struktur ohne IT‑Aufwand</li>
+            <li><strong>Hotelketten & Gruppen:</strong> standardisierbar, standortfähig, skalierbar</li>
             <li>Betriebe ohne eigene IT‑Abteilung</li>
-            <li>Ausbilder:innen mit Fokus auf Struktur & Übersicht</li>
+            <li>Ausbilder:innen mit Fokus auf Übersicht, Dokumentation & Prüfungssicherheit</li>
           </ul>
         </div>
       </div>
@@ -147,7 +147,7 @@
         </article>
 
         <article class="card">
-          <h3 class="card__title">Lernunterstützung (KI‑Modul)</h3>
+          <h3 class="card__title">Lernunterstützung (KI‑Modul – optional)</h3>
           <ul class="list">
             <li>Azubi stellt fachliche Fragen direkt aus der App</li>
             <li>Antworten in einfacher, verständlicher Sprache</li>
@@ -213,8 +213,8 @@
       </div>
     </section>
 
-    <!-- Technik + Pilot -->
-    <section class="section" aria-label="Technik und Pilot">
+    <!-- Technik + Pilot/Test -->
+    <section class="section" aria-label="Technik und Test">
       <div class="section__grid">
         <div class="card card--soft">
           <h3 class="card__kicker">Technische Rahmenbedingungen</h3>
@@ -223,17 +223,17 @@
             <li>Android & iOS kompatibel</li>
             <li>Offline nutzbar</li>
             <li>Start über <strong>index.html</strong></li>
-            <li>Verkauf als Dateipaket (ZIP)</li>
-            <li>Keine App‑Stores · Keine laufenden Kosten</li>
+            <li>Bereitstellung als Dateipaket (ZIP)</li>
+            <li>Keine App‑Stores · Keine laufenden Plattformkosten</li>
           </ul>
         </div>
 
         <div class="card card--pilot">
           <h3 class="card__title">Praxisnah testen</h3>
           <p class="card__text">
-            Der Pilot richtet sich an Betriebe, die die Software real im Ausbildungsalltag erproben möchten.
+            Für <strong>Handwerksbetriebe</strong> als risikoarmer Einstieg – und für <strong>Hotelketten</strong> als sauberer Pilot vor Rollout.
           </p>
-          <a class="btn" href="https://mise-rebell-pilot.rebellemedia.de/" target="_blank" rel="noopener">Zum Pilot</a>
+          <a class="btn" href="https://mise-rebell-pilot.rebellemedia.de/" target="_blank" rel="noopener">Zum Test</a>
         </div>
       </div>
     </section>
